FIX: Room Score List 반환형 변경